add method delete
